[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/player.png" type="Texture" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]
[ext_resource path="res://sprites/32x32.png" type="Texture" id=3]
[ext_resource path="res://audio/Jump.wav" type="AudioStream" id=4]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.5, 15.5 )

[sub_resource type="AudioStreamRandomPitch" id=3]
audio_stream = ExtResource( 4 )

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 2 )
move_speed = 450.0
wall_slide_speed = 50.0
acceleration = 1000.0
decceleration = 1800.0
gravity = 2000.0

[node name="RunParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 16 )
emitting = false
amount = 12
lifetime = 0.5
local_coords = false
texture = ExtResource( 3 )
direction = Vector2( -1, -0.5 )
spread = 30.0
gravity = Vector2( 0, 500 )
initial_velocity = 350.0
scale_amount = 0.25
scale_amount_random = 0.5
scale_amount_curve = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="GroundFinder" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 48 )

[node name="SfxJump" type="AudioStreamPlayer" parent="."]
stream = SubResource( 3 )
volume_db = -15.0
